--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@
   color: #61dafb;
 }
 
+.red {
+  color: tomato;
+}
+
+.hide {
+  display: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
