--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,43 @@
   display: none;
 }
 
+.searchbar {
+  /* display:flex;
+ flex-direction:row;
+ justify-content:center; */
+  width: 100%;
+}
+.searchbar input {
+  width: 70%;
+  text-align: right;
+}
+.searchbar label {
+  margin-right: 10px;
+}
+
+.checking label {
+  margin-left: 10px;
+  font-size: 0.8rem;
+}
+
+.productList {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 0 25px 10px 25px;
+}
+.name {
+  display: inline-block;
+  text-align: left;
+  width: 48%;
+}
+.product {
+  display: inline-block;
+  text-align: left;
+  width: 48%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
